--- a/45-中间未知语法测试.html
+++ b/45-中间未知语法测试.html
@@ -12,7 +12,9 @@
         const params = [1,2,3,4]
         console.log(key in params,id in params)
 
-        //2.
+        //2.数字字符串 --> 转换为数字数组
+        const strArrays =  "0123456789"
+        const 
     </script>
 </body>
 </html>
