docs:组件通信|render

--- a/理解/2.vue-base/2.directive.html
+++ b/理解/2.vue-base/2.directive.html
@@ -11,6 +11,7 @@
         <input type="text" v-focus.color="color">
     </div>
     <!-- 指令有几部分组成 v-model.a.b.c="abc" -->
+    <!-- model 指令名. a, b, c 指令修饰符, abc 指令的值 -->
      <script src="node_modules/vue/dist/vue.js"></script>
      <!-- 让输入框自动获取焦点 -->
      <!-- 全局指令  所有组件 实例都可以使用 -->
