--- a/理解/1.vue-base/2.instance.html
+++ b/理解/1.vue-base/2.instance.html
@@ -40,8 +40,11 @@
         vm.$set(vm.age,'age',100); // Object.defineProperty
         // vm.$set([1,2,3],'0',100);
 
-        // vm.$el
-        // vm.$options
+        // vm.$set vm.$delete 帮我更新属性的 
+        // 新增的属性不会导致视图更新 ，更改数组索引也不会更新 
+        // vm.$data 代表 当前实例的数据 vm的数据
+        // vm.$el  渲染后的真实 dom
+        // vm.$options   所有对象
         // vm.$watch
         // vm.$nextTick
         // vm.$set
