--- a/理解/2.vue-base/6.animate.html
+++ b/理解/2.vue-base/6.animate.html
@@ -12,7 +12,7 @@
         }
         .v-enter{ /*进入前*/
             background: blue;;
-        }
+        } 
         .v-enter-active{
             background: purple;
             transition: all 10s linear;
@@ -40,13 +40,14 @@
     <script src="node_modules/vue/dist/vue.min.js"></script>
     <div id="app">
         <button @click="change">点击我</button>
-        <transition>
+        <transition >
             <div v-if="isShow" class="content">
                 content
             </div>
         </transition>
     </div>
     <script>
+        // Vue 中的动画 经常搭配 v-if v-show v-for 路由切换等一块使用
         let vm = new Vue({
             el: '#app',
             data: {
